--- a/src/app/details/info/info.component.html
+++ b/src/app/details/info/info.component.html
@@ -2,7 +2,7 @@
 
   <div class="ui grid">
 
-    <div class="row two column">
+    <div class="row three column">
 
       <div class="column" style="zoom: 0.7" >
             <img src="http://placehold.it/500x500" />
@@ -29,8 +29,10 @@
 
             </div>
 
-            <h1>{{qty}}</h1>
 
+            <!--
+            <h1>{{qty}}</h1>
+            -->
 
 
 
@@ -38,6 +40,11 @@
 
           </div>
 
+      </div>
+
+
+      <div class="column"  style="position: absolute; left:450px">
+        <app-small></app-small>
       </div>
 
 
