--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
   <div class="ui secondary pointing menu">
     <a routerLink="/" class="item" >Home</a><br>
-    <a routerLink="/cart"  class="item" routerLinkActive="active" >Cart</a>
+    <a routerLink="/cart"  class="item">Cart</a>
   </div>
 
   <div class="ui segment">
