--- a/src/app/cartpage/carthome/carthome.component.html
+++ b/src/app/cartpage/carthome/carthome.component.html
@@ -1,1 +1,14 @@
-<h1>hello</h1>
+<div class="container">
+    <app-list
+      [items] = "items"
+    ></app-list>
+</div>
+
+
+<div class="ui horizontal divider"></div>
+
+
+<div class="container">
+    <app-total></app-total>
+</div>
+
