--- a/src/app/totals/total/total.component.html
+++ b/src/app/totals/total/total.component.html
@@ -1,13 +1,30 @@
 <div class="ui segment">
-  <div class="ui two column very relaxed grid">
-    <div class="column">
+  <div class="ui five column grid">
+
+
+    <div class="row" >
+
+      <div class="column">
+        <h4>Subtotals : $</h4>
+      </div>
+
+      <div class="ui vertical divider"></div>
+
+      <div class="column">
+        <h4 >Free Shipping</h4>
+      </div>
+
+      <div class="ui vertical divider"></div>
+
+      <div class="column">
+        <h4 >Total = $ </h4>
+      </div>
+
 
     </div>
-    <div class="column">
 
-    </div>
+
+
   </div>
-  <div class="ui vertical divider">
-    and
-  </div>
+
 </div>
