--- a/src/app/cartpage/carthome/carthome.component.html
+++ b/src/app/cartpage/carthome/carthome.component.html
@@ -9,6 +9,9 @@
 
 
 <div class="container">
-    <app-total></app-total>
+    <app-total
+    [totals] = "totalItems"
+
+    ></app-total>
 </div>
 
