--- a/src/app/listing/list/list.component.html
+++ b/src/app/listing/list/list.component.html
@@ -26,10 +26,15 @@
         <h4 >Subtotal = ${{item.order * item.price}}</h4>
       </div>
 
+
+      <button (click)="onUpdate()" class="ui button">
+        Update Cart
+      </button>
+
     </div>
 
-
-
   </div>
+
+
 
 </div>
