--- a/src/app/smallcart/small/small.component.html
+++ b/src/app/smallcart/small/small.component.html
@@ -17,7 +17,7 @@
   <div class="ui clearing divider"></div>
 
   <div>
-    <button class="ui button">Checkout</button>
+    <button (click)="onCheckout()" class="ui button">Checkout</button>
   </div>
 
 </div>
