--- a/src/app/totals/total/total.component.html
+++ b/src/app/totals/total/total.component.html
@@ -1,27 +1,31 @@
 <div class="ui segment">
-  <div class="ui five column grid">
+  <div class="ui grid">
+
+
+    <div class="row">
+
+    </div>
+
+    <div class="ui horizontal divider"></div>
 
 
     <div class="row" >
+    </div>
 
-      <div class="column">
-        <h4>Subtotals : $</h4>
-      </div>
+      <div class="horizontal divider"></div>
 
-      <div class="ui vertical divider"></div>
-
-      <div class="column">
+      <div class="row">
         <h4 >Free Shipping</h4>
       </div>
 
-      <div class="ui vertical divider"></div>
+      <div class="ui horizontal divider"></div>
 
-      <div class="column">
-        <h4 >Total = $ </h4>
+      <div class="row">
+        <h4 >Total = ${{getTotal()}} </h4>
       </div>
 
 
-    </div>
+
 
 
 
