--- a/src/app/listing/list/list.component.html
+++ b/src/app/listing/list/list.component.html
@@ -1,8 +1,12 @@
 <div class="ui segment">
-  <div class="ui five column grid">
+  <div class="ui six column grid">
 
 
-    <div class="row" *ngFor="let item of items" >
+    <div class="row" *ngFor="let item of items " >
+
+      <div class="column">
+        <i (click)="onCloseItem(item._id)" class="close icon link"></i>
+      </div>
 
       <div class="column">
           <h4>{{item.title}}</h4>
@@ -34,6 +38,8 @@
     <button (click)="onUpdate()" class="ui button" >
       Update Cart
     </button>
+
+
 
   </div>
 
