--- a/src/app/smallcart/small/small.component.html
+++ b/src/app/smallcart/small/small.component.html
@@ -7,8 +7,10 @@
   <div class="ui grid">
 
     <div class="row" *ngFor="let item of items">
+
+       <i (click)="onCloseItem(item._id)"  class="close icon link"></i>
       <h3 class="content">{{item.title}}</h3>
-      <h4 class="extra content">{{item.order}} x ${{item.price}}</h4>
+      <h4 class="content">{{item.order}} x ${{item.price}}</h4>
       <div class="ui clearing divider"></div>
     </div>
 
@@ -16,7 +18,7 @@
 
   <div class="ui clearing divider"></div>
 
-  <div>
+  <div *ngIf="check()">
     <button (click)="onCheckout()" class="ui button">Checkout</button>
   </div>
 
