--- a/src/app/totals/total/total.component.html
+++ b/src/app/totals/total/total.component.html
@@ -1,5 +1,5 @@
 <div class="ui segment">
-  <h1>Totals</h1>
+  <h1>Product Totals</h1>
   <div class="ui grid">
 
 
@@ -7,10 +7,9 @@
           <h4>Subtotal = ${{ item.confirmed * item.price }}</h4>
     </div>
 
+
     <div class="ui horizontal divider"></div>
 
-
-      <div class="horizontal divider"></div>
 
       <div class="row">
         <h4 >Free Shipping</h4>
