--- a/src/app/details/info/info.component.html
+++ b/src/app/details/info/info.component.html
@@ -1,10 +1,14 @@
 <div class="container">
 
-  <div class="ui one column grid">
 
-    <div class="column five wide"  style="position: absolute; left:450px">
+
+  <div class="ui grid">
+
+    <div class="column five wide"  style="position: absolute; left:450px ; z-index: 2">
       <app-small></app-small>
     </div>
+
+
 
   </div>
 
@@ -65,6 +69,7 @@
 
 
 </div>
+
 
 
 
