--- a/src/app/details/info/info.component.html
+++ b/src/app/details/info/info.component.html
@@ -4,7 +4,7 @@
 
   <div class="ui grid">
 
-    <div class="column five wide"  style="position: absolute; left:450px ; z-index: 2">
+    <div class="column four wide"  style="position: absolute; left:450px ; z-index: 2">
       <app-small></app-small>
     </div>
 
